<resources>
    <string name="app_name">Media Integration</string>
    <string name="web_client_id">621901244580-634cce1f0r3289afk6uv7gcboaaupbh0.apps.googleusercontent.com</string>
    <string name="image_profile">Image Profile</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="id">id</string>
    <string name="logout">Logout</string>
    <string name="logo">logo</string>
    <string name="facebook_app_id">4847956291949556</string>
    <string name="fb_login_protocol_scheme">fb4847956291949556</string>
    <string name="facebook_client_token">56789</string>
</resources>